# Quotation-management

./: .gitignore  CMakeLists.txt  quasar.config.js
src/: mainwindow.cpp
src/components/admin/: OrderingPageTable.vue  POSOrderingDialog.vue
src/components/dashboard/: MetricCard.vue  SalesChart.vue
src/components/ordering/: POSOrderingDialog.vue
src/features/: index.js
src/pages/admin/: DashboardPage.vue  InventoryPage.vue  OrderingPage.vue  SettingsPage.vue  TransactionsPage.vue
src/pages/auth/: LoginPage.vue
src/router/: routes.js
src/services/: firebase.js
src/services/models/: Addon.js  Category.js  Product.js  SystemSettings.js
src/stores/: addonStore.js  categoryStore.js  orderStore.js  productStore.js  systemSettingsStore.js
